bugfix: increase z-index for hub header

--- a/projects/charon/src/app/hub/pages/hub-page/hub-page.component.scss
+++ b/projects/charon/src/app/hub/pages/hub-page/hub-page.component.scss
@@ -13,7 +13,7 @@
 .hub-page__header {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .hub-page__content-container {
